testing/errors/stringlength1.a
	*=$1000
		lda #""	; -> "String length is not 1."
